Fixed word-wrap issue.

--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -39,12 +39,20 @@ body
   p 
   {
     text-align: justify;
+    //white-space: nowrap;
     line-height: 1.75;
-    margin: 0 0 2px 0;
+    margin: 0% 5% 5% 0%;
   }
   footer 
   {
     border: none;
+  }
+  .profile-img {
+    float: left;
+    height: 50%;
+    width: 50%;
+    margin-right: 5%;
+    margin-bottom: 2%;
   }
   .brand-custom 
   {
